Sort out the overlapping header, stopping breadcrumb clicks

--- a/app/assets/stylesheets/sencha_base/style.scss
+++ b/app/assets/stylesheets/sencha_base/style.scss
@@ -236,7 +236,6 @@ form textarea {
 
 // holds the logo, dev sign in/submit services and Sencha Network dropdown. Applied to <header>
 #header {
-  height: 73px;
   margin-bottom: 36px;
   padding-bottom: 3em;
   padding-top: 36px;
@@ -1147,7 +1146,6 @@ background-position: 0 -729px;
 // wraps the search results; search field, results, list and filter options.
 #content-wrapper {
   background: #F8F8F8;
-  margin: -78px 0 0 0;
   min-height: 148px;
   padding: 15px 0 84px 0;
   position: relative;
